Исправлены замечания code review #1